<resources>
    <string name="app_name">Fantasy Run</string>
    <string name="title_run">Run</string>
    <string name="title_wearable">Wearable</string>
    <string name="title_myInfo">My Info</string>

    <string name="theme_fragment">Theme fragment</string>
    <string name="wearable_fragment">Wearable fragment</string>
    <string name="my_info_fragment">My Info fragment</string>

    <string name="theme_title">Theme</string>
    <string name="wearable_title">Wearable</string>
    <string name="my_info_title">My Info</string>
    <string name="scenario_title">Scenario</string>
    <string name="run_title">Run</string>
    <string name="summary_title">Summary</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="my_info_message">Please enter your biometric data.</string>
    <string name="my_info_age">Age (Years)</string>
    <string name="my_info_weight">Weight (lbs)</string>
    <string name="my_info_height">Height (inches)</string>

    <string name="button_text_monsters">Monsters</string>
    <string name="button_text_rings">Lord of the Rings</string>
    <string name="button_text_potter">Harry Potter</string>
    <string name="orcs_behind">The orcs are behind you...</string>
    <string name="aragorn_ahead">Aragorn and the company are ahead...</string>
    <string name="catch_up">Catch up with them!</string>
    <string name="start_run">Start Run</string>
    <string name="saved_myinfo_text">Info Saved. Now go for a run!</string>
    <string name="submit">Submit</string>
    <string name="pause">Pause</string>
    <string name="end_run">End Run</string>
    <string name="you_ran_so_much">You ran so much...</string>
    <string name="orcs_are_behind">Orcs are 0.5 miles behind you.</string>
    <string name="time">Time: 42 min.</string>
    <string name="you_got_tokens">You got 3 tokens!</string>
    <string name="distance">Distance: 1.2 miles.</string>
    <string name="paused">Paused</string>
    <string name="theme">Theme</string>
    <string name="you_will_get_3_tokens">You will get 3 tokens.</string>
    <string name="connect_your_wearable_device_via_bluetooth">Connect your wearable device via bluetooth.</string>
    <string name="data_from_wearable_fitness_tracker_will_be_used_to_calculate_the_perfect_zone_for_your_running">Data from wearable fitness tracker will be used to calculate the perfect heart rate zone for your running.</string>
    <string name="your_data_will_not_be_shared_with_any_third_party_all_data_will_be_deleted_upon_request">Your data will not be shared with any third-party. All data will be deleted upon request.</string>
    <string name="connected">Connected</string>
    <string name="data_will_be_used_for_calorie_spent_count">Data will be used for calorie spent count.</string>
</resources>
