<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dilaramadinger.fantasyrun.ScenarioFragment"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/orcs_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orcs_behind"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aragorn_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aragorn_ahead"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/orcs_textview"
        app:layout_constraintTop_toBottomOf="@+id/orcs_textview" />

    <TextView
        android:id="@+id/catch_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/catch_up"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aragorn_textview" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="111dp"
        android:layout_marginEnd="32dp"
        android:text="@string/start_run"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
